# ebike-g4-rtos

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  README.md  STM32G473CETX_FLASH.ld  arm-none-eabi-gcc.cmake  ebike-g4-rtos Debug.launch
Inc/: c_wrapper.h  mc.h  mc_startup.h  stm32g4xx_hal_conf.h  tusb_config.h  usb.h
Inc/STM32LIB/: DAC_Types.hpp  GPIO_Types.hpp  STM32G473xx.hpp  STM32G473xx_ADC.hpp  STM32G473xx_NVIC.hpp  STM32G473xx_SPI.hpp  STM32G473xx_TIM.hpp
Inc/ebikelib/: Adc2.hpp  AdcHelpers.hpp  CORDIC_Trig.hpp  EbikeConfig.hpp  EbikeConfig2.hpp  FOC_Lib.hpp  Gpio.hpp  HallSensor.hpp  NvicHelpers.hpp  Pwm.hpp  Rcc.hpp  Throttle.hpp  Timer.hpp  Util.hpp  adc.hpp
Src/: delay.c  main.c  main2.c  mc.cpp  usb.c  usb_descriptors.c
Src/ebikelib/: CORDIC_Trig.cpp  DRV8353.cpp  FOC_Lib.cpp  Throttle.cpp  adc.cpp
cobs/: cobs.cpp  cobs.h
device/: STM32G473.svd  STM32G473CETX_RAM.ld  startup_stm32g473cetx.s  stm32g431xx.h  stm32g441xx.h  stm32g471xx.h  stm32g473xx.h  stm32g474xx.h  stm32g483xx.h  stm32g484xx.h  stm32g491xx.h  stm32g4a1xx.h  stm32g4xx.h  stm32gbk1cb.h
inc/: delay.h
inc/STM32LIB/: STM32G473xx_DMA.hpp  STM32G473xx_DMAMUX.hpp  STM32G473xx_GPIO.hpp  STM32G473xx_RCC.hpp  Timer_Types.hpp
inc/ebikelib/: Buffer.hpp  CORDIC_Trig.hpp  DRV8353.hpp  FOC_Lib.hpp  Pin.hpp  RampControl.hpp  Rampgen.hpp  Rcc.hpp  TimerPeriph.hpp
script/: dearpygui_motor_plot.py  receive_thread.py
src/: c_wrapper.cpp  main.c  mc.cpp  mc_startup.cpp  usb_cdc.c  usb_info.cpp
src/ebikelib/: Adc.cpp  CORDIC_Trig.cpp  FOC_Lib.cpp  adc.cpp
tinc/: FreeRTOSConfig.h  usb_cdc.h
tinc/STM32LIB/: CORDIC_Types.hpp  RCC_Types.hpp  STM32G473xx_ADC_Common.hpp  STM32G473xx_CORDIC.hpp  STM32G473xx_DAC.hpp
tinc/ebikelib/: AdcPeriph.hpp  HallSensor.hpp  Register.hpp  usb_info.h
tinyusb/hw/bsp/stm32g4/: family.c
tsrc/ebikelib/: Throttle.cpp  Util.cpp
